[package]
name = "catch_game"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "CanvasGradient"] }
rand = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]  # Enable JavaScript support for WebAssembly

[lib]
crate-type = ["cdylib", "rlib"]